# crc

./: Cargo.toml
src/: cli.rs  component.rs  dir_ops.rs  file_ops.rs  file_utils.rs  lib.rs  main.rs  placeholder.rs  string_utils.rs  templates.rs
src/templates/: COMPONENT.styles.ts  COMPONENT.view.tsx  index.ts
